# breathe_trainer

./: .gitignore  CMakeLists.txt  README.md  mingw-w64-toolchain.txt
res/: resources.qrc
src/: CMakeLists.txt  ITrainerModelListener.h  ITrainerWindow.h  TrainProfile.cpp  TrainProfile.h  TrainerCommon.h  TrainerController.cpp  TrainerModel.cpp  TrainerModel.h  TrainerWindow.cpp  TrainerWindow.h  init.cpp  init.h  main.cpp  trainer.ui
src/Settings/: ISettings.h  ISettingsListener.h  IWindowSettingsModel.h  Settings.cpp  Settings.h  SettingsHelper.cpp  SettingsHelper.h  WidthHeight.h  WindowSettingsModel.cpp  WindowSettingsModel.h
src/SettingsWindow/: ISettingsController.h  ISettingsWindow.h  ISettingsWindowListener.h  SettingsController.cpp  SettingsController.h  SettingsWindow.cpp  SettingsWindow.h  settings.ui
src/TrainProfiles/: IProfileModelUpdaterListener.h  IProfileModelsUpdater.h  ISettingsRestorer.h  ITrainProfilesModel.h  ITrainProfilesModelCopy.h  ITrainProfilesModelEdit.h  ProfileListFragment.cpp  ProfileListFragment.h  ProfileModelUpdater.cpp  ProfileModelUpdater.h  TrainProfile.h  TrainProfilesModel.cpp  TrainProfilesModel.h
src/TrainerWindow/: ITimer.h  ITimerListener.h  ITrainerController.h  ITrainerModel.h  ITrainerModelListener.h  ITrainerWindow.h  ITrainerWindowListener.h  TimeMeter.cpp  TimeMeter.h  Timer.cpp  Timer.h  TrainerController.cpp  TrainerController.h  TrainerModel.cpp  TrainerModel.h  TrainerWindow.cpp  TrainerWindow.h  trainer.ui
tests/: CMakeLists.txt  TrainProfilesModelT.cpp  TrainerModelT.cpp
tests/mocks/: TrainerModelListenerMock.h
